--- a/template/css/style.css
+++ b/template/css/style.css
@@ -14,18 +14,13 @@ p a,h3 a{
 }
 
 /*-------------------------	Header --------------------------*/
-#header{
-	width: 960px;
-	margin: 0 auto;
-	overflow: hidden;
-}
 .header{
 	width: 960px;
 	margin: 0 auto;
 	overflow: hidden;
 	height: 710px;
 }
-#header ul#navigation,.header ul#navigation{
+.header ul#navigation{
 	list-style: none;
 	padding: 25px 10px 0;
 	margin: 0;
@@ -33,40 +28,40 @@ p a,h3 a{
 	width: 585px;
 	float: left;
 }
-#header ul#navigation li,.header ul#navigation li{
+.header ul#navigation li{
 	float: left;
 	margin: 0 15px 0 0;
 }
-#header ul#navigation li a#home,.header ul#navigation li a#home{
+.header ul#navigation li a#home{
 	background: url(../images/icons.gif) no-repeat 0 -203px;
 	text-indent: -99999px;
 	display: block;
 	width: 27px;
 	height: 23px;
 }
-#header ul#navigation li a#email,.header ul#navigation li a#email{
+.header ul#navigation li a#email{
 	text-indent: -99999px;
 	background: url(../images/icons.gif) no-repeat 0 -256px;
 	width: 33px;
 	height: 23px;
 	display: block;
 }
-#header ul#navigation li a img,.header ul#navigation li a img{
+.header ul#navigation li a img{
 	border: 0;
 }
-#header p,.header p{
+.header p{
 	float: right;
 	color: #A0A0A0;
 	margin: 25px 0 0;
 	font-family: arial;
 	font-size: 16px;
 }
-#header p span,.header p span{
+.header p span{
 	color: #31485A;
 	font-weight: bold;
 	font-size: 20px;
 }
-#header a#logo,.header a#logo{
+.header a#logo{
 	clear: both;
     display: inline-block;
     float: left;
@@ -77,17 +72,17 @@ p a,h3 a{
     text-decoration: none;
     color: rgba(255,255,255,0.9);
 }
-#header a#logo img,.header a#logo img{
+.header a#logo img{
 	border: 0;
 }
-#header a#logo div{
+.header a#logo div{
 	position: relative;
 	top: -20px;
 	left: 30px;
 	color:#093859;
 	font-weight:bold;
 }
-#header ul.navigation,.header ul.navigation{
+.header ul.navigation{
 	list-style: none;
 	overflow: hidden;
 	padding: 0;
@@ -95,41 +90,41 @@ p a,h3 a{
 	/*width: 520px;*/
 	float: right;
 }
-#header ul.navigation li,.header ul.navigation li{
+.header ul.navigation li{
 	float: left;
 	height: 48px;
 }
-#header ul.navigation li,.header ul.navigation li{
+.header ul.navigation li{
 	background: url(../images/bg-menu.gif) repeat-x;
 	padding: 0 10px;
 }
-#header ul.navigation li.selected,.header ul.navigation li.selected{
+.header ul.navigation li.selected{
 	background: url(../images/bg-menu-selected.gif) repeat-x;
 	padding: 0 10px;
 }
-#header ul.navigation li a,.header ul.navigation li a{
+.header ul.navigation li a{
 	line-height: 40px;
     text-decoration: none;
 	font-family: arial;
 	font-size: 16px;
 	color: #061558;
 }
-#header ul.navigation li a:hover..header ul.navigation li a:hover{
+.header ul.navigation li a:hover{
 	color: #5DA0D5;
 }
-#header div#featured{
+.header div#featured{
 	clear: both;
 }
-#header div#featured div.first{
+.header div#featured div.first{
 	margin: 0;
 }
-#header div#featured div{
+.header div#featured div{
 	height: auto;
 	width: auto;
 	float: left;
 	margin: 0 0 0 20px;
 }
-#header div#featured div ul{
+.header div#featured div ul{
 	overflow: hidden;
 	padding: 35px 0 0;
 	margin: 0;
@@ -138,30 +133,30 @@ p a,h3 a{
 	height: 525px;
 	position: relative;
 }
-#header div#featured div ul li.first{
+.header div#featured div ul li.first{
 	margin: 0 0 0 20px!important;
 	_margin: 0 0 0 10px!important;
 }
-#header div#featured div.first ul li.selected{
+.header div#featured div.first ul li.selected{
 	background: url(../images/bg-feat-menu-selected-left.gif) no-repeat left top;
 	margin: 0 0 0 5px;
 }
-#header div#featured div ul li{
+.header div#featured div ul li{
 	background: url(../images/bg-feat-menu-left.gif) no-repeat left top;
 	float: left;
 	height: 37px;
 	line-height: 40px;
 	margin: 0 0 0 4px;
 }
-#header div#featured div.first ul li.selected a{
+.header div#featured div.first ul li.selected a{
 	background: url(../images/bg-feat-menu-selected-right.gif) no-repeat left top;
 	color: #191C21;
 	padding: 0 32px;
 }
-#header div#featured div ul li.selected a:hover{
+.header div#featured div ul li.selected a:hover{
 	color: #868686;
 }
-#header div#featured div.first ul li a{
+.header div#featured div.first ul li a{
 	background: url(../images/bg-feat-menu-right.gif) no-repeat left top;
 	display: block;
 	_display: inline-block;
@@ -175,10 +170,10 @@ p a,h3 a{
 	padding: 0 33px;
 	font-weight: bold;
 }
-#header div#featured div ul li a:hover{
+.header div#featured div ul li a:hover{
 	color: #191C21;
 }
-#header div#featured div ul li.selected div{
+.header div#featured div ul li.selected div{
 	width: 630px;
 	height: 425px;
 	position: absolute;
@@ -188,21 +183,21 @@ p a,h3 a{
 	_top: 72px;
 	background: url(../images/bg-featured-bottom-curve.gif) no-repeat left bottom #fff;
 }
-#header div#featured div ul li.selected div a{
+.header div#featured div ul li.selected div a{
 	position: absolute;
 	left: 0;
 	background: none!important;
 	margin: 0;
     padding: 0!important;
 }
-#header div#featured div ul li.selected div a img{
+.header div#featured div ul li.selected div a img{
 	border: 0;
 }
-#header div#featured div ul li div a{
+.header div#featured div ul li div a{
 	position: absolute;
 	left: -99999px;
 }
-#header div#featured div ul li.selected div p{
+.header div#featured div ul li.selected div p{
 	left: 0;
     line-height: 26px;
     margin: 0;
@@ -214,7 +209,7 @@ p a,h3 a{
 	font-size: 16px;
 	width: auto;
 }
-#header div#featured div.first ul li.selected div p a{
+.header div#featured div.first ul li.selected div p a{
 	color: #105272!important;
     font-weight: bold;
     position: static;
@@ -226,15 +221,15 @@ p a,h3 a{
 	font-size: 16px;
 	padding: 0 !important;
 }
-#header div#featured div.first ul li.selected div p a:hover{
+.header div#featured div.first ul li.selected div p a:hover{
 	color: #393d42!important;
     text-decoration: underline;
 }
-#header div#featured div ul li div p{
+.header div#featured div ul li div p{
 	position: absolute;
 	left: -99999px;
 }
-#header div#featured div h3{
+.header div#featured div h3{
 	color: #666666;
     font-size: 18px;
     height: 40px;
@@ -244,7 +239,7 @@ p a,h3 a{
     width: 309px;
 	background: url(../images/interface.gif) no-repeat 0 -90px;
 }
-#header div#featured div form{
+.header div#featured div form{
 	height: auto;
     padding: 10px 20px 10px 15px;
     width: 274px;
@@ -252,7 +247,7 @@ p a,h3 a{
 	text-align: center;
 	background: url(../images/bg-sidebar-bottom-curve.gif) no-repeat center bottom #fff;
 }
-#header div#featured div form input{
+.header div#featured div form input{
 	background: url(../images/icons.gif) no-repeat 0 -104px;
 	text-indent: -99999px;
 	width: 62px;
@@ -262,30 +257,30 @@ p a,h3 a{
 	display: block;
 	margin: 0 auto;
 }
-#header div#featured div form select{
+.header div#featured div form select{
 	display: block;
 	width: 274px;
 	border: 1px solid #9A9A9A;
 	margin: 0 0 10px;
 	font-size: 11px;
 }
-#header div#featured div div{
+.header div#featured div div{
 	margin: 0;
 }
-#header div#featured div div h3{
+.header div#featured div div h3{
 	background: url(../images/interface.gif) no-repeat 0 -160px;
 	width: 309px;
 	height: auto;
 	margin: 15px 0 0;
 }
-#header div#featured div div ul{
+.header div#featured div div ul{
 	background: url(../images/bg-sidebar-bottom-curve2.gif) no-repeat left bottom;
 	height: auto;
     padding: 0 0 6px;
     position: static;
     width: 309px;
 }
-#header div#featured div div ul li{
+.header div#featured div div ul li{
 	background: #fff;
     float: none;
     height: auto;
@@ -294,7 +289,7 @@ p a,h3 a{
 	line-height: 25px;
 	width: 275px;
 }
-#header div#featured div div ul li a{
+.header div#featured div div ul li a{
 	margin: 0;
     padding: 0;
 	background: none;
@@ -304,7 +299,7 @@ p a,h3 a{
 	text-decoration: none;
 	font-weight: bold;
 }
-#header div#featured div div ul li p{
+.header div#featured div div ul li p{
 	margin: 0;
     padding: 0;
     width: auto;
@@ -313,7 +308,7 @@ p a,h3 a{
 	float: none;
 	color: #A0A0A0;
 }
-#header div#featured div div ul li p a{
+.header div#featured div div ul li p a{
 	color: #8C8C8C;
 	text-decoration: underline;
 }
@@ -322,33 +317,32 @@ p a,h3 a{
 }
 
 /*-------------------------	Content --------------------------*/
-#content{
-	width: auto;
-	background-color: #09154F;
-	overflow: hidden;
-	padding: 0 0 45px;
+.content {
+	margin: 0;
+    width: auto;
+	padding: 0 0 30px;
 }
-#content div{
-	width: 960px;
-	margin: 0 auto;
-	overflow: hidden;
+.content div {
+    width: 960px;
+    margin: 0 auto;
+    overflow: hidden;
 }
-#content div div.first{
+.content div div.first{
 	margin: 0;
 }
-#content div div{
+.content div div{
 	float: left;
 	width: 344px;
 	margin: 0 0 0 30px;
 	position: relative;
 }
-#content div h2{
+.content div h2{
 	color: #93CDF5;
 	font-size: 22px;
 	text-transform: uppercase;
 	margin: 0 0 15px 20px;
 }
-#content div ul{
+.content div ul{
 	list-style: none;
 	background-color: #FFFFFF;
 	padding: 15px;
@@ -356,30 +350,30 @@ p a,h3 a{
     overflow: hidden;
 	border-radius: 5px;
 }
-#content div ul li{
+.content div ul li{
 	height: 1%;
 	overflow: hidden;
 	margin: 0 0 20px 0;
 	_margin: 0 0 10px 0;
 }
-#content div ul li a{
+.content div ul li a{
 	float: left;
 	display: block;
 	position: static;
 	background: none;
 	padding: 0;
 }
-#content div ul li a img{
+.content div ul li a img{
 	border: 0;
 	margin: 0 15px 0 0;
 }
-#content div ul li span{
+.content div ul li span{
 	display: block;
 	clear: none;
     float: left;
     text-align: justify;
 }
-#content div ul li span a{
+.content div ul li span a{
 	text-decoration: none;
 	font-size: 14px;
 	font-family: arial;
@@ -389,7 +383,7 @@ p a,h3 a{
 	position: static;
 	padding: 0;
 }
-#content div ul li p{
+.content div ul li p{
 	clear: none;
     float: right;
     text-align: justify;
@@ -399,7 +393,7 @@ p a,h3 a{
 	font-size: 14px;
 	margin: 0 0 15px;
 }
-#content div ul li a.details{
+.content div ul li a.details{
 	font-size: 12px;
 	color: #674900;
 	text-decoration: none;
@@ -413,7 +407,7 @@ p a,h3 a{
 	position: static;
 	padding: 0;
 }
-#content div ul li a.book{
+.content div ul li a.book{
 	color: #d4ffff;
 	text-decoration: none;
 	font-family: arial;
@@ -426,7 +420,7 @@ p a,h3 a{
 	position: static;
 	padding: 0;
 }
-#content div a{
+.content div a{
 	font-family:arial;
 	font-size: 14px;
 	color: #4d4d4d;
@@ -437,14 +431,14 @@ p a,h3 a{
 	background: url(../images/arrow1.gif) no-repeat right center;
 	padding: 0 10px 0 0;
 }
-#content div a:hover{
+.content div a:hover{
 	color: #105272;
 }
-#content div div#news{
+.content div div#news{
 	width: auto;
 	margin: 0 0 0 20px;
 }
-#content div div#news a{
+.content div div#news a{
 	background: none;
 	color: #40568F;
     display: block;
@@ -452,29 +446,29 @@ p a,h3 a{
     margin: 0 0 0 20px;
     position: static;
 }
-#content div div#news div a{
+.content div div#news div a{
 	background: url(../images/arrow3.gif) no-repeat right center;
 	width: 145px;
 }
-#content div div#news a font{
+.content div div#news a font{
 	color: #84c4ea;
 	font-weight: bold;
 }
-#content div div div{
+.content div div div{
 	float: none;
     margin: 0;
     position: static;
     width: auto;
 }
-#content div div div a#download{
+.content div div div a#download{
 	margin: 0;
 	background: none;
 	_margin-left: -10px;
 }
-#content div div div a#download img{
+.content div div div a#download img{
 	border: 0;
 }
-#content div div div p{
+.content div div div p{
 	color: #40568F;
     font-family: arial;
     font-size: 14px;
@@ -483,11 +477,11 @@ p a,h3 a{
 	line-height: 20px;
 	margin: 6px 0 14px;
 }
-#content div div div a{
+.content div div div a{
 	color: #2B668E !important;
     font-weight: bold;
 }
-#content div div div p a{
+.content div div div p a{
 	display: inline !important;
     line-height: 0 !important;
     margin: 0 !important;
@@ -497,20 +491,11 @@ p a,h3 a{
 	background: none !important;
 	width: auto;
 }
-#content div div div h3{
+.content div div div h3{
 	color: #93CDF5;
     font-size: 22px;
     margin: 10px 0 15px 20px;
     text-transform: uppercase;
-}
-.content {
-	margin: 0;
-    width: auto;
-	padding: 0 0 30px;
-}
-.content div {
-    margin: 500px auto 0;
-    width: 960px;
 }
 .content div#blog{
 	margin-top: -490px;
@@ -892,29 +877,29 @@ p a,h3 a{
 }
 
 /*-------------------------	Footer --------------------------*/
-#footer{
+.footer{
 	border-width: 1px;
 	border-style: solid none none;
 	border-color: #A0A0A0;
 	margin: 5px 0 0;
 	background-color: #fff;
 }
-#footer div{
+.footer div{
 	width: 960px;
 	margin: 0 auto;
 	padding: 15px 0 0;
 }
-#footer ul{
+.footer ul{
 	list-style: none;
 	margin: 5px 50px 0 20px;
 	_margin: 5px 43px 0 20px;
 	padding: 0;
 	float: left;
 }
-#footer ul li{
+.footer ul li{
 	margin: 0 0 10px;
 }
-#footer ul li a{
+.footer ul li a{
 	font-family: arial;
 	font-size: 14px;
 	color: #8b8b8b;
@@ -922,19 +907,19 @@ p a,h3 a{
 	background: url(../images/arrow2.gif) no-repeat right 6px;
 	padding: 0 10px 0 0;
 }
-#footer ul li a:hover{
+.footer ul li a:hover{
 	color: #105272;
 }
-#footer form{
+.footer form{
 	float: left;
 }
-#footer form span{
+.footer form span{
 	color: #8b8b8b;
 	font-family: arial;
 	font-size: 16px;
 	font-weight: bold;
 }
-#footer form h2{
+.footer form h2{
 	font-family: arial;
 	font-size: 18px;
 	font-weight: bold;
@@ -942,7 +927,7 @@ p a,h3 a{
 	margin: 0 0 10px;
     text-transform: uppercase;
 }
-#footer form input#email{
+.footer form input#email{
 	width: 266px;
 	color: #8b8b8b;
 	font-family: arial;
@@ -955,7 +940,7 @@ p a,h3 a{
 	margin: 0;
 	padding: 6px 5px 4px;
 }
-#footer form input#submit{
+.footer form input#submit{
 	float: left;
 	background: url(../images/icons.gif) no-repeat 0 -48px;
 	width: 33px;
@@ -964,7 +949,7 @@ p a,h3 a{
 	margin: 0 0 0 -15px;
 	cursor: pointer;
 }
-#footer p{
+.footer p{
 	clear: both;
 	font-family: arial;
 	font-size: 12px;
