--- a/template/css/style.css
+++ b/template/css/style.css
@@ -318,31 +318,32 @@ p a,h3 a{
 
 /*-------------------------	Content --------------------------*/
 .content {
-	margin: 0;
+    margin: 0;
     width: auto;
-	padding: 0 0 30px;
+    padding: 0 0 30px;
 }
-.content div {
+#content {
     width: 960px;
-    margin: 0 auto;
+    background-color: #09154F;
     overflow: hidden;
+    margin: 0 auto;
 }
-.content div div.first{
+#content div.first{
 	margin: 0;
 }
-.content div div{
+#content div{
 	float: left;
 	width: 344px;
-	margin: 0 0 0 30px;
+	margin: 0 0 0 12px;
 	position: relative;
 }
-.content div h2{
+#content h2{
 	color: #93CDF5;
 	font-size: 22px;
 	text-transform: uppercase;
 	margin: 0 0 15px 20px;
 }
-.content div ul{
+#content ul{
 	list-style: none;
 	background-color: #FFFFFF;
 	padding: 15px;
@@ -350,30 +351,30 @@ p a,h3 a{
     overflow: hidden;
 	border-radius: 5px;
 }
-.content div ul li{
+#content ul li{
 	height: 1%;
 	overflow: hidden;
 	margin: 0 0 20px 0;
 	height: 90px;
 }
-.content div ul li a{
+#content ul li a{
 	float: left;
 	display: block;
 	position: static;
 	background: none;
 	padding: 0;
 }
-.content div ul li a img{
+#content ul li a img{
 	border: 0;
 	margin: 0 15px 0 0;
 }
-.content div ul li span{
+#content ul li span{
 	display: block;
 	clear: none;
     float: left;
     text-align: justify;
 }
-.content div ul li span a{
+#content ul li span a{
 	text-decoration: none;
 	font-size: 14px;
 	font-family: arial;
@@ -383,7 +384,7 @@ p a,h3 a{
 	position: static;
 	padding: 0;
 }
-.content div ul li p{
+#content ul li p{
 	clear: none;
     float: right;
     text-align: justify;
@@ -393,7 +394,7 @@ p a,h3 a{
 	font-size: 14px;
 	margin: 0 0 15px;
 }
-.content div ul li a.details{
+#content ul li a.details{
 	font-size: 12px;
 	color: #674900;
 	text-decoration: none;
@@ -407,7 +408,7 @@ p a,h3 a{
 	position: static;
 	padding: 0;
 }
-.content div ul li a.book{
+#content ul li a.book{
 	color: #d4ffff;
 	text-decoration: none;
 	font-family: arial;
@@ -420,7 +421,7 @@ p a,h3 a{
 	position: static;
 	padding: 0;
 }
-.content div a {
+#content a {
     font-family: arial;
     font-size: 14px;
     color: #4d4d4d;
@@ -428,7 +429,7 @@ p a,h3 a{
     top: 480px;
     right: 15px;
 }
-.content div a.view_all{
+#content a.view_all{
 	font-family:arial;
 	font-size: 14px;
 	color: #4d4d4d;
@@ -439,14 +440,14 @@ p a,h3 a{
 	background: url(../images/arrow1.gif) no-repeat right center;
 	padding: 0 10px 0 0;
 }
-.content div a:hover{
+#content a:hover{
 	color: #105272;
 }
-.content div div#news{
-	width: auto;
+#content div#news{
+	width: 240px;
 	margin: 0 0 0 20px;
 }
-.content div div#news a{
+#content div#news a{
 	background: none;
 	color: #40568F;
     display: block;
@@ -454,29 +455,23 @@ p a,h3 a{
     margin: 0 0 0 20px;
     position: static;
 }
-.content div div#news div a{
+#content div#news div a{
 	background: url(../images/arrow3.gif) no-repeat right center;
 	width: 145px;
 }
-.content div div#news a font{
+#content div#news a font{
 	color: #84c4ea;
 	font-weight: bold;
 }
-.content div div div{
-	float: none;
-    margin: 0;
-    position: static;
-    width: auto;
-}
-.content div div div a#download{
+#content div#news div a#download{
 	margin: 0;
 	background: none;
-	_margin-left: -10px;
+	margin-left: -10px;
 }
-.content div div div a#download img{
+#content div#news div a#download img{
 	border: 0;
 }
-.content div div div p{
+#content div#news div p{
 	color: #40568F;
     font-family: arial;
     font-size: 14px;
@@ -485,11 +480,11 @@ p a,h3 a{
 	line-height: 20px;
 	margin: 6px 0 14px;
 }
-.content div div div a{
+#content div#news div a{
 	color: #2B668E !important;
     font-weight: bold;
 }
-.content div div div p a{
+#content div#news div p a{
 	display: inline !important;
     line-height: 0 !important;
     margin: 0 !important;
@@ -499,7 +494,7 @@ p a,h3 a{
 	background: none !important;
 	width: auto;
 }
-.content div div div h3{
+#content div#news div h3{
 	color: #93CDF5;
     font-size: 22px;
     margin: 10px 0 15px 20px;
@@ -527,14 +522,14 @@ p a,h3 a{
 	overflow: hidden;
 	border-radius: 5px;
 }
-.content div#about{
+.content div#signup{
 	margin-top: -490px;
 	background-color: #fff;
 	padding: 0 0 200px;
 	overflow: hidden;
 	border-radius: 5px;
 }
-.content div#blog h2,.content div#activities h2,.content div#about h2,.content div#restaurant h2,.content div#destinations h2,.content div#deals h2,.content div#ships-and-activities h2,
+.content div#blog h2,.content div#activities h2,.content div#signup h2,.content div#restaurant h2,.content div#destinations h2,.content div#deals h2,.content div#ships-and-activities h2,
 .content div#offers h2,.content div#featured h2{
 	background: url(../images/interface.gif) no-repeat 0 -230px;
 	height: 71px;
@@ -590,7 +585,7 @@ p a,h3 a{
 	width: 550px;
 	line-height: 26px;
 }
-.content div#excursions h3,.content div#cruises h3,.content div#about h3,.content div#featured div h3{
+.content div#excursions h3,.content div#cruises h3,.content div#signup h3,.content div#featured div h3{
 	margin: 35px 30px 10px;
 	font-family: arial;
 	font-size: 16px;
@@ -666,7 +661,7 @@ p a,h3 a{
 	font-size: 30px;
 	text-transform: capitalize;
 }
-.content div#excursions p,.content div#cruises p,.content div#about p{
+.content div#excursions p,.content div#cruises p,.content div#signup p{
 	margin: 0 30px 15px;
 	font-family: arial;
 	font-size: 14px;
@@ -675,7 +670,7 @@ p a,h3 a{
 	line-height: 26px;
 	text-align: justify;
 }
-.content div#about p{
+.content div#signup p{
 	margin: 0 30px 25px;
 	font-family: arial;
 	font-size: 14px;
@@ -689,7 +684,7 @@ p a,h3 a{
 	font-weight: bold;
 	text-decoration: none;
 }
-.content div#about p a{
+.content div#signup p a{
 	color: #555555;
 	text-decoration: underline;
 }
@@ -1000,7 +995,7 @@ p a,h3 a{
     font-size: .9em;
     border: none;
 }
-.light_box label input {
+.light_box label input{
     display: block;
     width: 377px;
     height: 31px;
@@ -1063,4 +1058,14 @@ a.form_button {
 }
 #alert_yes {
     background-position: -290px -99px;
+}
+#signup label input{
+    display: block;
+    width: 393px;
+    height: 34px;
+    background-position: -201px 0;
+    padding: 2px 8px;
+    font-size: 1.2em;
+    line-height: 31px;
+    margin-left: 30px;
 }
