--- a/template/css/style.css
+++ b/template/css/style.css
@@ -12,7 +12,9 @@ p a,h3 a{
 	text-decoration: underline;
 	color: #8B8B8B;
 }
-
+form {
+	margin-bottom: 0;
+}
 /*-------------------------	Header --------------------------*/
 .header{
 	width: 960px;
@@ -125,7 +127,7 @@ p a,h3 a{
 	margin: 0 0 0 20px;
 }
 .header div#featured div ul{
-	overflow: hidden;
+	/*overflow: hidden;*/
 	padding: 35px 0 0;
 	margin: 0;
 	width: 630px;
@@ -151,7 +153,7 @@ p a,h3 a{
 .header div#featured div.first ul li.selected a{
 	background: url(../images/bg-feat-menu-selected-right.gif) no-repeat left top;
 	color: #191C21;
-	padding: 0 32px;
+	/*padding: 0 32px;*/
 }
 .header div#featured div ul li.selected a:hover{
 	color: #868686;
@@ -174,7 +176,7 @@ p a,h3 a{
 	color: #191C21;
 }
 .header div#featured div ul li.selected div{
-	width: 630px;
+	width: 960px;
 	height: 425px;
 	position: absolute;
 	border-radius: 5px;
@@ -312,10 +314,28 @@ p a,h3 a{
 	color: #8C8C8C;
 	text-decoration: underline;
 }
-.errorColor{
+.errorColor {
 	color:red;
 }
-
+#search_div {
+	background-color:#FFFFFF;
+	width:286px;
+	display: none;
+	margin: 120px 0 0 69px;
+	padding:0;
+	position:absolute;
+	z-index:1;
+	min-height: 129px;
+}
+a.search_key_button {
+    float: left;
+    width: 93px;
+    height: 31px;
+    margin: 15px 0px;
+}
+#key_button {
+	background-position: -395px -191px;
+}
 /*-------------------------	Content --------------------------*/
 .content {
     margin: 0;
