--- a/template/css/style.css
+++ b/template/css/style.css
@@ -579,6 +579,10 @@ a.search_key_button {
 	float: left;
 	cursor: default;
 }
+.content div#featured div #right ul li a img{
+	margin: 10px;
+	float: left;
+}
 .content div#featured div ul{
 	list-style: none;
 	float: left;
@@ -607,7 +611,10 @@ a.search_key_button {
     font-weight:bold;
 }
 .content div#featured div #right ul li .detail-house-item{
-    padding: 0 28px;
+    padding: 5px 28px;
+    font-size: 16px;
+    font-family: arial;
+    color: #555555;
 }
 .detail-house-item span {
     float: left;
