[add] 點擊,[add] 推薦區塊,[fix]資料

--- a/template/css/style.css
+++ b/template/css/style.css
@@ -971,7 +971,99 @@ a.search_key_button {
 .content div#restaurant ul li a img,.content div#destinations ul li a img,.content div#deals ul li a img,.content div#ships-and-activities ul li a img,.content div#offers ul li a img{
 	border: 0;
 }
-
+.re_list{
+    background-color: #fff;
+    overflow: hidden;
+    border-radius: 5px;
+    width: 970px;
+    height:auto;
+    display: block;
+    margin:-50px auto 60px auto;
+}
+.re_list .re_ul{
+    list-style: none;
+    background-color: #FFFFFF;
+    padding: 15px;
+    margin: 0;
+    overflow: hidden;
+    border-radius: 5px;
+    min-height: 150px;
+}
+.re_list ul li{
+    width: 188px;
+    height: auto;
+    overflow: hidden;
+    margin: 0 0 20px 0;
+    float: left;
+}
+.re_list ul li a {
+    float: left;
+    display: block;
+    position: static;
+    background: none;
+    padding: 0 0 0 11px;
+    font-family: arial;
+    font-size: 14px;
+    color: #4d4d4d;
+    text-decoration: none;
+}
+.re_list ul li span {
+    width: 158px;
+    display: block;
+    clear: none;
+    float: left;
+    text-align: justify;
+    margin: 0 0 0 11px;
+}
+.re_list ul li span a {
+    text-decoration: none;
+    font-size: 14px;
+    font-family: arial;
+    color: #105272;
+    font-weight: bold;
+    background: none;
+    position: static;
+    padding: 0;
+    float: left;
+    display: block;
+}
+.re_list ul li p {
+    clear: none;
+    float: left;
+    text-align: justify;
+    width: 158px;
+    color: #393D42;
+    font-family: arial;
+    font-size: 8.5pt;
+    margin: 0 0 0 11px;
+}
+.re_list ul li a.details {
+    font-size: 12px;
+    color: #674900;
+    text-decoration: none;
+    font-family: arial;
+    background: url(../images/icons.gif) no-repeat 0 -155px;
+    width: 74px;
+    height: 18px;
+    text-align: center;
+    line-height: 18px;
+    margin: 0 5px 0 11px;
+    position: static;
+    padding: 0;
+}
+.re_list ul li a.book {
+    color: #d4ffff;
+    text-decoration: none;
+    font-family: arial;
+    background: url(../images/interface.gif) no-repeat;
+    width: 70px;
+    height: 18px;
+    text-align: center;
+    line-height: 18px;
+    font-size: 12px;
+    position: static;
+    padding: 0;
+}
 /*-------------------------	Footer --------------------------*/
 .footer{
 	border-width: 1px;
