--- a/template/css/style.css
+++ b/template/css/style.css
@@ -41,7 +41,7 @@ form {
 	width: 27px;
 	height: 23px;
 }
-.header ul#navigation li a#email{
+.header ul#navigation li a#mailto{
 	text-indent: -99999px;
 	background: url(../images/icons.gif) no-repeat 0 -256px;
 	width: 33px;
@@ -489,7 +489,7 @@ a.search_key_button {
 	background: url(../images/arrow3.gif) no-repeat right center;
 	width: 145px;
 }
-#content div#news a font{
+#content div#news a{
 	color: #84c4ea;
 	font-weight: bold;
 }
@@ -1176,6 +1176,11 @@ a.search_key_button {
     padding-bottom: 54px;
     margin-bottom: 12px;
 }
+#sign_up_form2 {
+    position: relative;
+    padding-bottom: 54px;
+    margin-bottom: 12px;
+}
 .light_box label {
     display: block;
     margin-bottom: 10px;
@@ -1231,6 +1236,17 @@ a.form_button {
     height: 16px;
 }
 #close_x {
+    width: 24px;
+    height: 23px;
+    overflow: hidden;
+    line-height: 1000px;
+    display: block;
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    background-position: -387px -102px;
+}
+#close_x2 {
     width: 24px;
     height: 23px;
     overflow: hidden;
